# optionstrat

./: .coverage  .gitignore  .windsurfrules  PROMPT_SCRATCHPAD.md  README.md  docker-compose.yml  integration_tests_status.md  option_chain_selector_plan.md  options.db  package_upgrade_plan.md  project_plan.md  project_plan_near_term.md  project_plan_overall.md  project_plan_xo1.md  pyproject.toml  run_app.sh
.scripts/: update_structure.sh
PLANS/: PROMPT.txt  plans-index.md  root-uv-migration-option-b-plan.md  security-scan-dispersion-aggregate-plan.md  security-scan-html-report-crosshair.md  security-scan-html-report-dispersion-plot-plan.md
current-project-plans/: editable_positions_sheet_implementation_plan.md  option-chain-selection-improvements.md  option_chain_selector_implementation_plan_updated.md  pnl-calculation-implementation.md  project_plan_near_term.md  project_plan_overall.md  put-visualization-fix.md  volatility-and-greeks-fix.md
old-project-plans/: position_creation_integration_plan.md
scan-reports/: security_scan_20260206-0311.json  security_scan_20260206-0311.md  security_scan_20260209-0317.json  security_scan_20260209-0317.md  security_scan_20260209-1256.json  security_scan_20260209-1256.md  security_scan_20260209-1313.json  (+5 more)
src/backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  options.db  project_setup.sh  pyproject.toml  requirements.txt  run_all_tests.sh  run_test_with_mock.sh  run_tests.sh  security_scan.db
src/backend/PLANS/: redis-evaluation-2026-01-28.md
src/backend/app/: db_upgrade.py  dependencies.py  main.py
src/backend/app/docs/: market_data_providers.md
src/backend/app/examples/: market_data_example.py
src/backend/app/models/: database.py  schemas.py
src/backend/app/routes/: debug.py  greeks.py  market_data.py  options.py  positions.py  scenarios.py  security_scan.py
src/backend/app/security_scan/: README.md  __init__.py  aggregates.py  cli.py  config_loader.py  criteria.py  data_fetcher.py  db.py  dispersion.py  indicator_adapters.py  indicator_workbench.py  scan_runner.py  series_math.py  signals.py  storage.py
src/backend/app/security_scan/config/: scan_settings.toml  securities.toml
src/backend/app/security_scan/indicators/: __init__.py  qrs_consist_excess.py  roc.py  roc_aggregate.py  scl_ma2_qrs_ma1_breakout.py  scl_v4_x5.py
src/backend/app/security_scan/notebooks/: ticker_prep.py
src/backend/app/security_scan/reporting/: __init__.py  aggregate_charts.py  aggregate_series.py  dispersion_charts.py  dispersion_html_report.py  dispersion_markdown_report.py  dispersion_series.py  html_report.py  markdown_report.py
src/backend/app/services/: market_data.py  market_data_provider.py  option_chain_service.py  option_pricing.py  polygon_provider.py  scenario_engine.py  volatility_service.py  yfinance_provider.py
src/backend/app/tests/: test_market_data_providers.py
src/backend/notebooks/: indicator_sanity_check.py  options.db
src/backend/scripts/: redis_local_setup.sh
src/backend/tests/: README.md  conftest.py  test_api_endpoints.py  test_database.py  test_health.py  test_market_data.py  test_option_api_endpoints.py  test_option_chain_service.py  test_option_pricing.py  test_qrs_consist_excess.py  test_scenario_engine.py  test_scl_ma2_qrs_ma1_breakout.py  test_scl_v4_x5.py  test_security_scan.py  test_security_scan_api.py  test_security_scan_markdown_report.py
src/backend/tests/integration_tests/: README.md  __init__.py  conftest.py  mocks.py  test_database_persistence.py  test_market_data_pipeline.py  test_mock_providers.py  test_strategy_pipeline.py
src/backend/tests/integration_tests/mocks/: __init__.py  polygon_api_mock.py  redis_mock.py
src/backend/tests/security_scan/: test_indicator_workbench.py  test_intraday_scan_runner.py  test_security_scan_cli.py
(+106 files in other folders)
