[project]
name = "optionstrat-backend"
version = "0.1.0"
description = "Backend API for Options Scenario Analysis & Exploration App"
readme = "README.md"
requires-python = ">=3.13.11,<4.0"
authors = [{ name = "Jeff Coggshall", email = "thenextlocalminima@gmail..com" }]
dependencies = [
  "fastapi>=0.109.0,<0.116.0",
  "starlette>=0.46.0,<0.47.0",
  "uvicorn>=0.27.0,<0.28.0",
  "sqlalchemy>=2.0.25,<3.0.0",
  "pydantic>=2.5.3,<3.0.0",
  "quantlib>=1.32,<2.0.0",
  "yfinance>=0.2.35,<0.3.0",
  "numpy>=1.26.3,<2.0.0",
  "pandas>=2.1.4,<3.0.0",
  "requests>=2.31.0,<3.0.0",
  "redis>=5.0.1,<6.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "pytest>=8.4.2",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "black>=23.7.0,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "mypy>=1.5.1,<2.0.0",
  "flake8>=6.1.0,<7.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["quantlib.*"]
ignore_missing_imports = true 
